# stock-investment-set

./: README.md  data_scapper.ipynb  portfolio_rebalancer.ipynb  portfolio_template.xlsx  pyproject.toml
