[tool.poetry]
name = "stock-investment-set"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "stock_investment_set"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pandas = "^2.0.3"
tqdm = "^4.65.0"
openpyxl = "^3.1.2"

[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"
ipykernel = "^6.24.0"
black = "^23.7.0"
nbstripout = "^0.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
